# open-supaplex-cmake

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
changelog/: v7.2_clean.txt
package/: PKGBUILD  open-supaplex.desktop
src/: audio.c  file.c  logging.c  supaplex.c  system.c  utils.c  virtualKeyboard.c
src/sdl2/: controller.c  video.c
